Change the color of the button to increase the contrast between background and the text

--- a/style.css
+++ b/style.css
@@ -452,7 +452,7 @@ textarea::placeholder {
 
 .form-field button {
   border-style: none;
-  color: #6070ff;
+  color: #5061fd;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
