--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
   box-sizing: content-box;
 }
 
+a {
+  list-style: none;
+  text-decoration: none;
+  color: #000;
+}
+
 .container {
   display: flex;
   flex-direction: row;
