--- a/style.css
+++ b/style.css
@@ -7,7 +7,21 @@
 a {
   list-style: none;
   text-decoration: none;
-  color: #000;
+  color: white;
+  font-family: "Poppins";
+font-style: normal;
+font-weight: 600;
+font-size: 32px;
+line-height: 44px;
+display: flex;
+align-items: center;
+}
+
+.menu-item-style {
+  background: url('./images/bluebg.png');
+  height: 100vh;
+  width: 100%;
+  margin-top: -30px;
 }
 
 .container {
