--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@
   background: url('./images/bluebg.png');
   height: 100vh;
   width: 100%;
-  margin-top: -30px;
 }
 
 .container {
@@ -47,7 +46,9 @@
   line-height: 44px;
   color: #fff;
 }
-
+.menu-items{
+  display: none;
+}
 .cancel {
   align-self: flex-end;
   padding-top: 30px;
@@ -545,6 +546,7 @@ textarea::placeholder {
     display: flex;
     list-style: none;
     color:black;
+
   
   }
 
@@ -552,10 +554,11 @@ textarea::placeholder {
     padding: 20px;
     font-family: "Poppins", sans-serif;
     font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
+    font-weight: 700;
+    font-size: 20px;
     line-height: 20px;
     color: #344563;
+    gap: 2em;
   }
   .logo {
     padding: 20px;
