--- a/style.css
+++ b/style.css
@@ -10,19 +10,6 @@
   overflow: hidden;
 }
 
-a {
-  list-style: none;
-  text-decoration: none;
-  color: white;
-  font-family: "Poppins", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 44px;
-  display: flex;
-  align-items: center;
-}
-
 .logo {
   flex-grow: 1;
   flex-shrink: 5;
@@ -38,19 +25,20 @@ a {
 }
 
 .menu-item-style {
-  background-image: url('./images/bluebg.png');
   display: flex;
-  flex-wrap: wrap;
+  background: #6070FF;
+  mix-blend-mode: multiply;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 32px;
-  line-height: 44px;
   color: #fff;
-  height: 100vh;
-  width: 150%;
-  margin-top: -30px;
-  margin-right: 0;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  height: 120vh;
 }
 
 .cancel {
@@ -59,6 +47,18 @@ a {
 
 .list-items {
   align-self: flex-start;
+}
+a {
+  list-style: none;
+  text-decoration: none;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  mix-blend-mode: normal;
 }
 
 h1 {
@@ -69,21 +69,10 @@ h1 {
   align-items: center;
   color: #172b4d;
   margin: 12px 0;
-  padding-top: 50px;
-  animation-duration: 5s;
-  animation-name: slidein;
-}
-
-@keyframes slidein {
-  from {
-    margin-left: 100%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
+  padding-top: 80px;
+  height: 150px;
+  left: 24px;
+  top: 150px;
 }
 
 p {
