--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   flex-direction: row;
   padding: 25px;
   overflow: hidden;
+
 }
 
 .logo {
@@ -25,6 +26,7 @@
 }
 
 .menu-item-style {
+  position: fixed;
   display: flex;
   background: #6070ff;
   opacity: 0.92;
@@ -33,7 +35,6 @@
   font-weight: 600;
   font-size: 32px;
   color: #fff;
-  position: absolute;
   left: 0;
   right: 0;
   top: 0;
@@ -504,7 +505,31 @@ textarea::placeholder {
   text-align: center;
   margin: 10px auto;
 }
+.popup-window{
+  display: none;
 
+}
+.popup{
+  display: flex;
+flex-direction: column;
+align-items: center;
+padding: 16px;
+
+position: absolute;
+width: 343px;
+height: 713px;
+left: calc(50% - 343px/2);
+top: 60px;
+
+/* Neutrals/N0 */
+
+background: #FFFFFF;
+/* Neutrals/N40 */
+
+border: 1px solid #DFE1E6;
+box-sizing: border-box;
+border-radius: 16px;
+}
 /* Desktop-version */
 @media screen and (min-width: 992px) {
   body {
